--- a/Python/CS50/lecture4/forLoopList.ipynb
+++ b/Python/CS50/lecture4/forLoopList.ipynb
@@ -23,20 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "king\n",
-      "jack\n",
-      "ace\n",
-      "queen\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -62,6 +51,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "print(\"hello, my name is\", sys.argv[1])"
    ]
   },
@@ -70,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **create exception to handle no input**"
+    "# **Create exception to handle no input**"
    ]
   },
   {
@@ -80,10 +70,117 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "try:\n",
     "\tprint(\"hello, my name is\", sys.argv[1])\n",
     "except IndexError:\n",
     "\tprint(\"Too few arguments\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Handling errors without exceptions**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "if len(sys.argv) < 2:\n",
+    "\tprint(\"Too few arguments\") \n",
+    "elif len(sys.argv) > 2:\n",
+    "\tprint(\"Too many arguments\")\n",
+    "else:\n",
+    "\tprint(\"hello, my name is\", sys.argv[1])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Seperating error handling from main funcitons**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "if len(sys.argv) < 2:\n",
+    "\tprint(\"Too few arguments\")\n",
+    "elif len(sys.argv) > 2:\n",
+    "\tprint(\"Too many arguments\")\n",
+    "\n",
+    "print(\"hello, my name is\", sys.argv[1])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "use sys.exit instead to output a string before exiting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "if len(sys.argv) < 2:\n",
+    "\tsys.exit(\"Too few arguments\")\n",
+    "elif len(sys.argv) > 2:\n",
+    "\tsys.exit(\"Too many arguments\")\n",
+    "\n",
+    "print(\"hello, my name is\", sys.argv[1])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Input multiple arguments**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "if len(sys.argv) < 2:\n",
+    "\tprint(\"Too few arguments\")\n",
+    "for arg in sys.argv[1:]:\n",
+    "\tprint(\"hello, my name is\", arg)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``` \n",
+    "[1:] slices the program name/first item off the list\n",
+    "\n",
+    "[1:-1] slices the first and last item off the list"
    ]
   }
  ],
